<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:id="@+id/parent_layout"
    android:background="#fff">

    <ImageView
        android:id="@+id/ivNombre"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/userpicture" />

    <ImageView
        android:id="@+id/ivApellido"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivNombre"
        app:srcCompat="@drawable/phone" />

    <ImageView
        android:id="@+id/ivGrupo"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivApellido"
        app:srcCompat="@drawable/address_book" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textColor="@color/colorPrimaryDark3"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/ivNombre"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/phone"
        android:textColor="@color/colorPrimaryDark3"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/ivApellido"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

    <TextView
        android:id="@+id/tvGrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/group"
        android:textColor="@color/colorPrimaryDark3"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/ivGrupo"
        app:layout_constraintTop_toBottomOf="@+id/tvApellido" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/tvApellido"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>